--- a/src/app/config/config.component.html
+++ b/src/app/config/config.component.html
@@ -1,9 +1,9 @@
 <h3>Get configuration from JSON file</h3>
 <div>
-  <button (click)="clear(); showConfig()">get</button>
-  <button (click)="clear(); showConfigResponse()">getResponse</button>
-  <button (click)="clear()">clear</button>
-  <button (click)="clear(); makeError()">error</button>
+  <button mat-flat-button color = 'accent' (click)="clear(); showConfig()">get</button>
+  <button mat-flat-button color = 'accent' (click)="clear(); showConfigResponse()">getResponse</button>
+  <button mat-flat-button color = 'accent' (click)="clear()">clear</button>
+  <button mat-flat-button color = 'accent' (click)="clear(); makeError()">error</button>
 
   <span *ngIf="config">
     <p>Heroes API URL is {{config.heroesUrl}}</p>
@@ -15,7 +15,7 @@
         <li *ngFor="let header of headers">{{header}}</li>
       </ul>
     </div>
-    
+
   </span>
 </div>
  
